<resources>
    <string name="app_name">Water Your Plants</string>

    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot password?</string>

    <string name="et_hint_email">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="et_hint_name">Name</string>


    <string name="item_data_sensor_name">SENSOR 1</string>
    <string name="item_data_sensor_condition">Condition</string>
    <string name="item_data_sensor_temperature">Temperature</string>
    <string name="item_data_sensor_description">Description</string>

    <string name="menu_main_log_out">Log Out</string>
    <string name="menu_main_account_details">Account details</string>
    <string name="menu_main_about_app">About App</string>

    <string name="fab_description">Add new sensor</string>

    <string name="dialog_create_title">Add a new sensor</string>
...
    <string name="sensor_data_dialog_delete_positive_button">Delete</string>
    <string name="sensor_data_btn_copy_sensor_id">Copy Sensor Id</string>
    <string name="sensor_data_watering_title">Watering</string>
    <string name="sensor_data_watering_duration">set duration from 5 to 30 seconds</string>
    <string name="sensor_data_watering_auto">Auto Watering</string>
    <string name="sensor_data_editing_title">Editing</string>
    <string name="cb_remember_me">Remember me</string>
    <string name="sensor_data_watering_notify">Notify about dry condition</string>
    <string name="sensor_data_sleep_mode_title">Set up sleep mode</string>
    <string name="sensor_data_sleep_mode_description">set sleep mode time from 5 to 60 minutes</string>
    <string name="sensor_data_sleep_mode_auto">Auto Sleep Mode</string>


    <string name="toast_error_empty_fields">Please fill all required fields</string>
    <string name="toast_reg_success">Registration is successful</string>
    <string name="toast_reg_failed">Failed to register. Try again.</string>
    <string name="toast_reset_success">Password send to your email</string>
    <string name="toast_login_success">Login is successful</string>
    <string name="toast_login_failed">Login failed</string>
    <string name="toast_dialog_empty_sensor_name">Please try again and give your sensor a name</string>
    <string name="toast_dialog_delete_success">Account Deleted</string>
    <string name="toast_menu_log_out">Logged Out</string>
    <string name="toast_update_success">User details updated</string>
    <string name="toast_update_failed">Something is wrong</string>
    <string name="toast_copy_id_success">User Id successfully copied</string>
    <string name="toast_sensor_data_copy_id_success">Sensor Id successfully copied</string>
    <string name="toast_sensor_data_set_watering_slider_success_1">"Watering duration successfully sets for "</string>
    <string name="toast_sensor_data_set_watering_slider_success_2">" sec"</string>
...
