...
        android:layout_height="0dp"
        android:layout_weight="30"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/blue"
...
